--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 class="apresentacao__conteudo__texto"
     Olá! Sou <strong>Natália</strong>, uma desenvolvedora <strong>Front-End </strong> com especialidade em <strong>HTML</strong> e <strong>CSS</strong>. Ajudo pequenos negócios e designers a praticarem suas melhores ideias. <strong>Vamos conversar?</strong>
   </p>
-  </div>
+  </div apresentacao__links>
 <a
 href="https://instagram.com/">
   INSTAGRAM
@@ -32,7 +32,7 @@ href="https://instagram.com/">
   <a href="https://github.com/"</a>
 
   <img class="foto" src="foto.jpg">
-  
+<div> 
 </main>
 
   <footer> <!-- Footer é o rodapé -->
