--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  
   <div class="apresentacao__conteudo>">
   <h1 class="apresentacao__conteudo__titulo">
-    Eleve seu negócio digital a outro nível <strong> com um Front-En de qualidade!< > </strong> </h1>
+    Eleve seu negócio digital a outro nível <strong> com um Front-En de qualidade!</strong> </h1>
        
     <p class="apresentacao__conteudo__texto">Olá! Sou Natália,uma desenvolvedora Front-End com especialidade em </strong>HTML< e CSS</strong>. Ajudo pequenos negócios e designers a praticarem suas melhores ideias. <strong>Vamos conversar?</p>
     
@@ -29,7 +29,7 @@
   </div> 
   
   
-  <img  src="foto.jpg"> class="foto">
+  <img class="foto" src="foto.jpg">
 </main>
 
   <footer> <!-- Footer é o rodapé -->
