--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="apresentacao__conteudo>">
   <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo__destaque">com um Front-En de qualidade!</strong> </h1>
        
-    <p class="apresentacao__conteudo__texto">Olá! Sou Natália,uma estudante do ensino médio, </strong>meus hobies são assistir e ler </strong>, ajudo pequenos negócios e designers a praticarem suas melhores ideia.<strong> Vamos conversar?</strong> </p>
+    <p class="apresentacao__conteudo__texto">Olá! Sou Natália,uma estudante do ensino médio, </strong>meus hobies são assistir e ler.</strong> Ajudo pequenos negócios e designers a praticarem suas melhores ideias.<strong> Vamos conversar?</strong> </p>
     
   
   <div class="apresentacao__links">
